--- a/style.css
+++ b/style.css
@@ -269,6 +269,11 @@ tr.completed input[type="checkbox"] {
     color: #000;
     box-shadow: 0 0 15px rgba(0, 255, 255, 0.8);
 }
+.active-button{
+    background-color: #00FFFF !important;
+    color: #000 !important;
+    box-shadow: 0 0 15px rgba(0, 255, 255, 0.8) !important;
+}
 
 #share-text-output {
     width: 90%;
